--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.3.21",
     "hamburger-react": "^2.5.1",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
